alignment fix, navbar color added

--- a/StockMarketSim/src/app/pages/create-account/create-account.component.css
+++ b/StockMarketSim/src/app/pages/create-account/create-account.component.css
@@ -4,8 +4,10 @@ h1{
     width:800px; 
     margin:auto;
     text-align: center;
-    padding-bottom: 10px;
-    
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 form{
     box-shadow: 0px 0px 11px -3px rgba(0,0,0,0.75)!important;
@@ -17,3 +19,10 @@ button{
     font-weight: lighter;
     border-color: black;
 }
+
+#box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
