--- a/StockMarketSim/src/app/pages/log-in/log-in.component.css
+++ b/StockMarketSim/src/app/pages/log-in/log-in.component.css
@@ -4,15 +4,30 @@ h1{
     width:800px; 
     margin:auto;
     text-align: center;
-    padding-bottom: 10px;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 form{
     box-shadow: 0px 0px 11px -3px rgba(0,0,0,0.75)!important;
     border-radius: 5px;
     padding-bottom: 50px;
+   
+
 }
 button{
-    background-color: gray;
+    background-color: rgb(10, 192, 55);
     font-weight: lighter;
     border-color: black;
 }
+
+#box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  
+  
